kubernetes/front/ingress.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http-front
  namespace: getlock
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`getlock.agrrh.com`) || Host(`getlock.5426b488.nip.io`)
      middlewares:
        - name: request-headers
          namespace: traefik
      services:
        - name: front
          namespace: getlock
          passHostHeader: true
          port: 80
          scheme: http
